# beancount-ing

./: .travis.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  Pipfile  README.md  README.rst  pyproject.toml  requirements.dev.in  requirements.dev.txt  setup.py
.github/workflows/: main.yml
beancount_ing/: cli.py  ec.py
beancount_ing_diba/: ec.py
tests/: test_ec_importer.py
