[tool.poetry]
name = "beancount-ing"
version = "0.6.0"
description = "Beancount Importer for ING (DE) CSV exports"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["README.md", "License.txt"]
repository = "https://github.com/siddhantgoel/beancount-ing"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
beancount = "^2.3"
flake8 = "^4.0"
pytest = "^7.1"
black = "^22.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
