[tool.poetry]
name = "beancount-ing"
version = "0.6.0"
description = "Beancount Importer for ING (DE) CSV exports"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/siddhantgoel/beancount-ing"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
beancount = "^2.3"
flake8 = "^5.0"
pytest = "^7.4"
black = "^23.12"

[tool.taskipy.tasks]
fmt = "black beancount_ing/ tests/"

lint-black  = "black --check beancount_ing/ tests/"
lint-flake8 = "flake8 beancount_ing/ tests/"
lint = "task lint-black && task lint-flake8"

test-pytest = "pytest tests/"
test = "task test-pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
