[tool.poetry]
name = "beancount-ing"
version = "1.0.1"
description = "Beancount Importer for ING (DE) CSV exports"
readme = "README.md"
authors = ["Siddhant Goel <me@sgoel.dev>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/siddhantgoel/beancount-ing"
keywords = ["banking", "beancount", "cli-accounting", "finance"]

[tool.poetry.dependencies]
python = "^3.9"
beancount = "^3.0.0"
beangulp = ">=0.1.1,<0.3.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
ruff = ">=0.5.1,<0.10.0"
pytest = "^8.2.2"

[tool.poetry.scripts]
beancount-ing-ec = "beancount_ing.cli:ec"

[tool.taskipy.tasks]
lint = "ruff check beancount_ing/ tests/"
test = "pytest tests/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
